--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --mode=development",
-    "build": "webpack"
+    "build": "webpack --mode=production"
   },
   "devDependencies": {
     "dotenv-webpack": "^1.5.7",
