--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 
-before_script: echo "WEBSOCKET_SERVER=ws://p.lempls.com" > .env
+before_script: echo "WEBSOCKET_SERVER=$WEBSOCKET_SERVER" > .env
 
 script: yarn build
 
