--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "remote-temperature-client",
-  "version": "2.0.0",
-  "description": "Arduino Remote Temperature Client",
-  "author": "Martin Kapal <flamecze@gmail.com>",
-  "license": "MIT",
+  "name": "svelte-app",
+  "version": "1.0.0",
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2",
+    "prettier-plugin-svelte": "^0.7.0",
+    "rollup": "^1.12.0",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^4.0.4",
+    "svelte": "^3.0.0"
+  },
   "dependencies": {
+    "sirv-cli": "^0.4.4",
     "sockette": "^2.0.6"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode=development",
-    "build": "webpack --mode=production"
-  },
-  "devDependencies": {
-    "dotenv-webpack": "^1.7.0",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "build": "rollup -c",
+    "autobuild": "rollup -c -w",
+    "dev": "run-p start:dev autobuild",
+    "start": "sirv public --single",
+    "start:dev": "sirv public --single --dev",
+    "prettier": "prettier --write --plugin-search-dir=. src/**/*.{js,svelte}"
   }
 }
