--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "d3-scale": "^3.1.0",
     "sirv-cli": "^0.4.4",
     "sockette": "^2.0.6"
   },
