--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-replace": "^2.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.27.10",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-dotenv": "^0.2.0",
-    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.1.3",
     "svelte": "^3.16.4"
