--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,5 +16,5 @@
   "start_url":"/?utm_source=homescreen",
   "display": "standalone",
   "theme_color": "#ffffff",
-  "background_color": "#3f8eb6"
+  "background_color": "#1e5799"
 }
