--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
+language: node_js
 before_script: echo "WEBSOCKET_SERVER=$WEBSOCKET_SERVER" > .env
+before_deploy: npm install -g firebase-tools
 deploy:
   provider: firebase
   token:
