--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: node_js
 before_script: echo "WEBSOCKET_SERVER=$WEBSOCKET_SERVER" > .env
+script: echo "App is ready"
 before_deploy: npm install -g firebase-tools
 deploy:
   provider: firebase
