--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+branches:
+  only:
+    - master
 language: node_js
 before_script: echo "WEBSOCKET_SERVER=$WEBSOCKET_SERVER" > .env
 script: echo "App is ready"
