--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url":"/",
   "display": "standalone",
   "theme_color": "#ffffff",
-  "background_color": "#3f8eb6",
+  "background_color": "#1e5799",
   "icons": [
     {
       "src": "/icon-192x192.png",
