--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ branches:
 
 language: node_js
 
-before_script: echo "WEBSOCKET_SERVER=$WEBSOCKET_SERVER" > .env
-
-script: yarn build
+script: WEBSOCKET_SERVER=$WEBSOCKET_SERVER yarn build
 
 before_deploy: npm install -g firebase-tools
 
