--- a/package.json
+++ b/package.json
@@ -1,33 +1,48 @@
 {
-  "name": "svelte-app",
+  "name": "remote-temperature-client",
+  "license": "MIT",
   "version": "1.0.0",
   "devDependencies": {
-    "@rollup/plugin-json": "^4.0.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
-    "@rollup/plugin-replace": "^2.2.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "prettier-plugin-svelte": "^0.7.0",
-    "rollup": "^1.27.10",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.1.3",
-    "svelte": "^3.16.4"
+    "@types/d3-scale": "^2.2.0",
+    "@types/styled-components": "^5.1.0",
+    "prettier": "^2.0.2"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^10.0.1",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.8",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "d3-scale": "^3.2.1",
-    "format-message": "^6.2.3",
-    "sirv-cli": "^0.4.5",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-scripts": "3.4.1",
     "sockette": "^2.0.6",
-    "svelte-intl": "^1.0.5"
+    "styled-components": "^5.1.0",
+    "typescript": "^3.8.3"
   },
   "scripts": {
-    "build": "rollup -c",
-    "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
-    "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev",
-    "prettier": "prettier --write --plugin-search-dir=. src/**/*.{js,svelte}"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write src/**/*.{ts,tsx}"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
