--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ jobs:
       with:
         node-version: '10.x'
     - run: yarn install
-    - run: WEBSOCKET_SERVER=${{ secrets.WEBSOCKET_SERVER }} yarn build
+    - run: yarn build
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
     - uses: w9jds/firebase-action@master
       with:
         args: deploy --only hosting --project arduino-remote
