Fix env variable name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     - run: yarn install
     - run: yarn build
       env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        REACT_APP_WEBSOCKET_SERVER: ${{ secrets.WEBSOCKET_SERVER }}
     - uses: w9jds/firebase-action@master
       with:
         args: deploy --only hosting --project arduino-remote
