--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.1",
+    "react-spring": "^9.0.0-rc.3",
     "sockette": "^2.0.6",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
