--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/setup-node@master
       with:
         node-version: '10.x'
-    - run: yarn install
+    - run: yarn install --production --non-interactive --no-progress
     - run: yarn build
       env:
         REACT_APP_WEBSOCKET_SERVER: ${{ secrets.WEBSOCKET_SERVER }}
