Change app theme colors

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Teplota U Pahoráka",
   "start_url":"/",
   "display": "standalone",
-  "theme_color": "#ffffff",
+  "theme_color": "#000",
   "background_color": "#1e5799",
   "icons": [
     {
