--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: Get Node.js version
+      id: nvm
+      run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
     - uses: actions/setup-node@master
       with:
-        node-version: '10.x'
+        node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
     - run: yarn install --production --non-interactive --no-progress
     - run: yarn build
       env:
