--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "license": "MIT",
   "version": "1.0.0",
   "devDependencies": {
-    "eslint-plugin-import": "^2.20.2",
-    "prettier": "^2.0.5"
+    "eslint-plugin-import": "^2.23.2",
+    "prettier": "^2.3.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
-    "@testing-library/jest-dom": "^5.3.0",
-    "@testing-library/react": "^10.0.2",
-    "@testing-library/user-event": "^10.0.1",
-    "@types/d3-scale": "^2.2.0",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.8",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/styled-components": "^5.1.0",
-    "d3-scale": "^3.2.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.1",
-    "react-spring": "^9.0.0-rc.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/d3-scale": "^3.2.2",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.0",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "@types/styled-components": "^5.1.9",
+    "d3-scale": "^3.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "react-spring": "^9.1.2",
     "sockette": "^2.0.6",
-    "styled-components": "^5.1.0",
-    "typescript": "^3.9.2"
+    "styled-components": "^5.3.0",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
