--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - run: yarn install --production --non-interactive --no-progress
       - run: yarn build
         env:
-          REACT_APP_WEBSOCKET_SERVER: ${{ secrets.WEBSOCKET_SERVER }}
+          REACT_APP_WEBSOCKET_SERVER: ${{ vars.WEBSOCKET_SERVER }}
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
